--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue-jql-autocomplete",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:lib": "vue-cli-service build --target lib --name vue-jql-autocomplete",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -24,5 +24,9 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
