--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "vue-jql-autocomplete",
-  "version": "0.1.0",
+  "version": "0.1.3",
+  "license": "MIT",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build:lib": "vue-cli-service build --target lib --name vue-jql-autocomplete",
+    "build:lib": "vue-cli-service build --target lib --name vue-jql-autocomplete ./src/components/JqlInput.vue",
     "lint": "vue-cli-service lint"
   },
+  "main": "./dist/vue-jql-autocomplete.common.js",
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-autosuggest": "^2.1.1",
+    "vue-clickaway": "^2.2.2",
+    "vue-simple-suggest": "^1.10.1",
+    "vuejs-auto-complete": "^0.9.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -28,5 +34,15 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "files": [
+    "dist/*",
+    "public/*",
+    "*.json",
+    "*.js"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/quantify/vue-jql-autocomplete.git"
+  }
 }
