--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-jql-autocomplete",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
@@ -12,10 +12,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vue-autosuggest": "^2.1.1",
-    "vue-clickaway": "^2.2.2",
-    "vue-simple-suggest": "^1.10.1",
-    "vuejs-auto-complete": "^0.9.0"
+    "vue-clickaway": "^2.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
